--- a/overlay/3-node/patches/bmh-blazer-cars-lab-super1-patch.yaml
+++ b/overlay/3-node/patches/bmh-blazer-cars-lab-super1-patch.yaml
@@ -3,6 +3,7 @@
   value: 'DE:AD:BE:EF:A0:1D'
 - op: replace
   path: /spec/bmc/address
+  # yamllint disable-line rule:line-length
   value: redfish-virtualmedia+http://kvmhost2.remote-skylark-ldc1.cars.lab:8082/redfish/v1/Systems/ca1a85d9-4bc2-5e86-af84-c39aac30c0e5
 - op: replace
   path: /spec/bmc/credentialsName
