--- a/overlay/3-node/patches/bmh-blazer-cars-lab-super2-patch.yaml
+++ b/overlay/3-node/patches/bmh-blazer-cars-lab-super2-patch.yaml
@@ -3,6 +3,7 @@
   value: 'DE:AD:BE:EF:9D:47'
 - op: replace
   path: /spec/bmc/address
+  # yamllint disable-line rule:line-length
   value: redfish-virtualmedia+http://kvmhost2.remote-skylark-ldc1.cars.lab:8082/redfish/v1/Systems/8273cc27-82c1-54dc-9eab-a75ea53f1ebf
 - op: replace
   path: /spec/bmc/credentialsName
