--- a/overlay/3-node/patches/bmh-blazer-cars-lab-super3-patch.yaml
+++ b/overlay/3-node/patches/bmh-blazer-cars-lab-super3-patch.yaml
@@ -3,6 +3,7 @@
   value: 'DE:AD:BE:EF:C8:86'
 - op: replace
   path: /spec/bmc/address
+  # yamllint disable-line rule:line-length
   value: redfish-virtualmedia+http://kvmhost2.remote-skylark-ldc1.cars.lab:8082/redfish/v1/Systems/03798b5b-994b-5088-89f3-30f7c6fb35e2
 - op: replace
   path: /spec/bmc/credentialsName
