--- a/base/sno/managedcluster.yaml
+++ b/base/sno/managedcluster.yaml
@@ -5,7 +5,7 @@ metadata:
   name: cluster
   namespace: clustername
   labels:
-    local-argo: "true"
+    local-argo: "True"
     cluster.open-cluster-management.io/clusterset: all-openshift-clusters
   annotations:
     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
