Change bases to resources

--- a/overlay/3-node/kustomization.yaml
+++ b/overlay/3-node/kustomization.yaml
@@ -5,8 +5,8 @@ kind: Kustomization
 namespace: blazer-cars-lab
 # namePrefix: blazer-cars-lab-
 
-bases:
-  - ../../base/3-node
+resources:
+  - github.com/redhat-partner-solutions/vse-ocp-bases/base/3-node?ref=main
 
 patchesStrategicMerge:
   - ./patches/nmstate-config.yaml
