--- a/base/3-node/kustomization.yaml
+++ b/base/3-node/kustomization.yaml
@@ -5,6 +5,7 @@ kind: Kustomization
 resources:
   - namespace.yaml
   - pullsecret-sealed.yaml
+  - provisioning.yaml
   - aci.yaml
   - clusterdeployment.yaml
   - infraenv.yaml
