--- a/overlay/3-node/kustomization.yaml
+++ b/overlay/3-node/kustomization.yaml
@@ -2,14 +2,14 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: blazer-cars-lab
-# namePrefix: blazer-cars-lab-
+namespace: volante-cars-lab
 
 resources:
-  - github.com/redhat-partner-solutions/vse-ocp-bases/base/3-node?ref=main
+  - ../../base/3-node
 
 patchesStrategicMerge:
   - ./patches/nmstate-config.yaml
+  - ./patches/aci.yaml
 
 patches:
   - target:
@@ -18,61 +18,59 @@ patches:
     patch: |-
       - op: replace
         path: /metadata/labels/name
-        value: 'blazer-cars-lab'
+        value: 'volante-cars-lab'
   - target:
       kind: AgentClusterInstall
     patch: |-
       - op: replace
         path: /spec/clusterDeploymentRef/name
-        value: 'blazer-cars-lab'
+        value: 'volante-cars-lab'
       - op: replace
         path: /metadata/name
-        value: 'blazer-cars-lab'
+        value: 'volante-cars-lab'
   - target:
       kind: SealedSecret
-    patch: |-
-      - op: replace
-        path: /spec/template/metadata/namespace
-        value: 'blazer-cars-lab'
+      name: assisted-deployment-pull-secret
+    path: ./patches/pullsecret-sealed-patch.yaml
   - target:
       kind: Secret
       name: bmc-super1
     patch: |-
       - op: replace
         path: /metadata/name
-        value: 'blazer-cars-lab-bmc-super1'
+        value: 'volante-cars-lab-bmc-super1'
   - target:
       kind: Secret
       name: bmc-super2
     patch: |-
       - op: replace
         path: /metadata/name
-        value: 'blazer-cars-lab-bmc-super2'
+        value: 'volante-cars-lab-bmc-super2'
   - target:
       kind: Secret
       name: bmc-super3
     patch: |-
       - op: replace
         path: /metadata/name
-        value: 'blazer-cars-lab-bmc-super3'
+        value: 'volante-cars-lab-bmc-super3'
   - target:
       kind: ManagedCluster
     patch: |-
       - op: replace
         path: /metadata/name
-        value: 'blazer-cars-lab'
+        value: 'volante-cars-lab'
   - target:
       kind: BareMetalHost
       name: super1
-    path: ./patches/bmh-blazer-cars-lab-super1-patch.yaml
+    path: ./patches/bmh-volante-cars-lab-super1-patch.yaml
   - target:
       kind: BareMetalHost
       name: super2
-    path: ./patches/bmh-blazer-cars-lab-super2-patch.yaml
+    path: ./patches/bmh-volante-cars-lab-super2-patch.yaml
   - target:
       kind: BareMetalHost
       name: super3
-    path: ./patches/bmh-blazer-cars-lab-super3-patch.yaml
+    path: ./patches/bmh-volante-cars-lab-super3-patch.yaml
   - target:
       kind: ClusterDeployment
     path: ./patches/clusterdeployment-patch.yaml
@@ -82,3 +80,10 @@ patches:
   - target:
       kind: KlusterletAddonConfig
     path: ./patches/klusterletaddon-patch.yaml
+  - target:
+      kind: Provisioning
+      name: provisioning-configuration
+    patch: |-
+      - op: replace
+        path: /spec/disableVirtualMediaTLS
+        value: true
