--- a/overlay/3-node/patches/bmh-volante-cars-lab-super1-patch.yaml
+++ b/overlay/3-node/patches/bmh-volante-cars-lab-super1-patch.yaml
@@ -1,16 +1,17 @@
+---
 - op: replace
   path: /spec/bootMACAddress
-  value: 'DE:AD:BE:EF:A0:1D'
+  value: 'DE:AD:BE:EF:77:DA'
 - op: replace
   path: /spec/bmc/address
   # yamllint disable-line rule:line-length
-  value: redfish-virtualmedia+http://kvmhost2.remote-skylark-ldc1.cars.lab:8082/redfish/v1/Systems/ca1a85d9-4bc2-5e86-af84-c39aac30c0e5
+  value: redfish-virtualmedia+https://kvmhost2.remote-skylark-ldc1.cars.lab:8082/redfish/v1/Systems/2a143c67-0ad4-5522-9943-ecaeb27f4b43
 - op: replace
   path: /spec/bmc/credentialsName
-  value: blazer-cars-lab-bmc-super1
+  value: volante-cars-lab-bmc-super1
 - op: replace
   path: /metadata/labels/infraenvs.agent-install.openshift.io
-  value: blazer-cars-lab-infraenv
+  value: infraenv
 - op: replace
   path: /metadata/name
-  value: blazer-cars-lab-super1
+  value: volante-cars-lab-super1
