--- a/overlay/3-node/patches/bmh-volante-cars-lab-super3-patch.yaml
+++ b/overlay/3-node/patches/bmh-volante-cars-lab-super3-patch.yaml
@@ -1,16 +1,17 @@
+---
 - op: replace
   path: /spec/bootMACAddress
-  value: 'DE:AD:BE:EF:C8:86'
+  value: 'DE:AD:BE:EF:A7:53'
 - op: replace
   path: /spec/bmc/address
   # yamllint disable-line rule:line-length
-  value: redfish-virtualmedia+http://kvmhost2.remote-skylark-ldc1.cars.lab:8082/redfish/v1/Systems/03798b5b-994b-5088-89f3-30f7c6fb35e2
+  value: redfish-virtualmedia+https://kvmhost2.remote-skylark-ldc1.cars.lab:8082/redfish/v1/Systems/550e75a5-e224-5f1a-9a00-c132cea6f533
 - op: replace
   path: /spec/bmc/credentialsName
-  value: blazer-cars-lab-bmc-super3
+  value: volante-cars-lab-bmc-super3
 - op: replace
   path: /metadata/labels/infraenvs.agent-install.openshift.io
-  value: blazer-cars-lab-infraenv
+  value: infraenv
 - op: replace
   path: /metadata/name
-  value: blazer-cars-lab-super3
+  value: volante-cars-lab-super3
