--- a/overlay/3-node/patches/infraenv-patch.yaml
+++ b/overlay/3-node/patches/infraenv-patch.yaml
@@ -1,15 +1,22 @@
+---
+- op: replace
+  path: /spec/additionalNTPSources
+  value: ['registry.cars.lab', 'fd00:6:6:11::52']
 - op: replace
   path: /spec/clusterRef/name
-  value: 'blazer-cars-lab'
+  value: 'volante-cars-lab'
 - op: replace
   path: /spec/clusterRef/namespace
-  value: 'blazer-cars-lab'
+  value: 'volante-cars-lab'
 - op: replace
   path: '/spec/nmStateConfigLabelSelector/matchLabels/cluster-name'
-  value: 'blazer-nmstate'
+  value: 'volante-nmstate'
 - op: replace
   path: '/spec/pullSecretRef/name'
   value: 'assisted-deployment-pull-secret'
 - op: replace
   path: /metadata/name
-  value: blazer-cars-lab-infraenv
+  value: infraenv
+- op: replace
+  path: '/spec/nmStateConfigLabelSelector/matchLabels/cluster-name'
+  value: 'volante-nmstate'
