--- a/overlay/3-node/patches/klusterletaddon-patch.yaml
+++ b/overlay/3-node/patches/klusterletaddon-patch.yaml
@@ -1,9 +1,10 @@
+---
 - op: replace
   path: /spec/clusterName
-  value: 'blazer-cars-lab'
+  value: 'volante-cars-lab'
 - op: replace
   path: /spec/clusterNamespace
-  value: 'blazer-cars-lab'
+  value: 'volante-cars-lab'
 - op: replace
   path: /metadata/name
-  value: blazer-cars-lab
+  value: 'volante-cars-lab'
