--- a/overlay/3-node/patches/nmstate-config.yaml
+++ b/overlay/3-node/patches/nmstate-config.yaml
@@ -4,7 +4,7 @@ kind: NMStateConfig
 metadata:
   name: nmstate-super1
   labels:
-    cluster-name: blazer-nmstate
+    cluster-name: volante-nmstate
 spec:
   config:
     interfaces:
@@ -13,13 +13,13 @@ spec:
         state: up
         ipv4:
           address:
-            - ip: 10.50.56.121
+            - ip: 10.50.57.121
               prefix-length: 24
           enabled: true
         ipv6:
           enabled: true
           address:
-            - ip: fd00:6:6:2056::121
+            - ip: fd00:6:6:2057::121
               prefix-length: 64
           autoconf: false
           dhcp: false
@@ -31,21 +31,21 @@ spec:
     routes:
       config:
         - destination: 0.0.0.0/0
-          next-hop-address: 10.50.56.1
+          next-hop-address: 10.50.57.1
           next-hop-interface: enp1s0
         - destination: ::/0
-          next-hop-address: fd00:6:6:2056::1
+          next-hop-address: fd00:6:6:2057::1
           next-hop-interface: enp1s0
   interfaces:
     - name: enp1s0
-      macAddress: DE:AD:BE:EF:A0:1D
+      macAddress: DE:AD:BE:EF:D0:D7
 ---
 apiVersion: agent-install.openshift.io/v1beta1
 kind: NMStateConfig
 metadata:
   name: nmstate-super2
   labels:
-    cluster-name: blazer-nmstate
+    cluster-name: volante-nmstate
 spec:
   config:
     interfaces:
@@ -54,13 +54,13 @@ spec:
         state: up
         ipv4:
           address:
-            - ip: 10.50.56.122
+            - ip: 10.50.57.122
               prefix-length: 24
           enabled: true
         ipv6:
           enabled: true
           address:
-            - ip: fd00:6:6:2056::122
+            - ip: fd00:6:6:2057::122
               prefix-length: 64
           autoconf: false
           dhcp: false
@@ -72,21 +72,21 @@ spec:
     routes:
       config:
         - destination: 0.0.0.0/0
-          next-hop-address: 10.50.56.1
+          next-hop-address: 10.50.57.1
           next-hop-interface: enp1s0
         - destination: ::/0
-          next-hop-address: fd00:6:6:2056::1
+          next-hop-address: fd00:6:6:2057::1
           next-hop-interface: enp1s0
   interfaces:
     - name: enp1s0
-      macAddress: DE:AD:BE:EF:9D:47
+      macAddress: DE:AD:BE:EF:D0:D7
 ---
 apiVersion: agent-install.openshift.io/v1beta1
 kind: NMStateConfig
 metadata:
   name: nmstate-super3
   labels:
-    cluster-name: blazer-nmstate
+    cluster-name: volante-nmstate
 spec:
   config:
     interfaces:
@@ -95,13 +95,13 @@ spec:
         state: up
         ipv4:
           address:
-            - ip: 10.50.56.123
+            - ip: 10.50.57.123
               prefix-length: 24
           enabled: true
         ipv6:
           enabled: true
           address:
-            - ip: fd00:6:6:2056::123
+            - ip: fd00:6:6:2057::123
               prefix-length: 64
           autoconf: false
           dhcp: false
@@ -113,11 +113,11 @@ spec:
     routes:
       config:
         - destination: 0.0.0.0/0
-          next-hop-address: 10.50.56.1
+          next-hop-address: 10.50.57.1
           next-hop-interface: enp1s0
         - destination: ::/0
-          next-hop-address: fd00:6:6:2056::1
+          next-hop-address: fd00:6:6:2057::1
           next-hop-interface: enp1s0
   interfaces:
     - name: enp1s0
-      macAddress: DE:AD:BE:EF:C8:86
+      macAddress: DE:AD:BE:EF:A7:53
