Fix SNO Klusterletaddon name patch
SNO Klusterletaddon name patch should be cluster name
CTONET-2902 #close Fixed

--- a/overlay/sno/patches/klusterletaddon-patch.yaml
+++ b/overlay/sno/patches/klusterletaddon-patch.yaml
@@ -6,7 +6,7 @@
   value: 'rna4'
 - op: replace
   path: /metadata/name
-  value: klusterletaddonconfig-rna4
+  value: rna4
 - op: replace
   path: /metadata/namespace
   value: rna4
